# ChangeLog for dev-java/jtds
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/jtds/ChangeLog,v 1.25 2010/04/05 23:04:41 caster Exp $

  05 Apr 2010; Vlastimil Babka <caster@gentoo.org>
  -files/1.0.3-buildxml.patch, -jtds-1.2-r2.ebuild,
  -files/1.2-com.sun.patch:
  Remove old.

  09 Feb 2010; Joseph Jezak <josejx@gentoo.org> jtds-1.2.4.ebuild:
  Marked ppc stable for bug #296053.

  14 Dec 2009; Brent Baude <ranger@gentoo.org> jtds-1.2.4.ebuild:
  stable ppc64, bug 296053

  09 Dec 2009; Markus Meier <maekke@gentoo.org> jtds-1.2.4.ebuild:
  amd64/x86 stable, bug #296053

*jtds-1.2.4 (07 Nov 2009)

  07 Nov 2009; Vlastimil Babka <caster@gentoo.org>
  -files/1.0.2-buildxml.patch, +jtds-1.2.4.ebuild,
  +files/1.2.4-buildxml.patch, -files/buildxml-gentoo.patch:
  Version bump. Now needs java 1.6.

  22 Mar 2008; Petteri Räty <betelgeuse@gentoo.org> jtds-1.2-r2.ebuild:
  RESTRICT test for the upcoming generic src_test as they need a running server.

  20 Jan 2008; Petteri Räty <betelgeuse@gentoo.org> jtds-1.2-r2.ebuild:
  Use EAPI=1 to match only slot 0 of junit.

  15 Jul 2007; Petteri Räty <betelgeuse@gentoo.org> -jtds-0.9.1.ebuild,
  -jtds-1.0.3.ebuild:
  Removing old versions as nothing uses them any more.

  15 Jul 2007; nixnut <nixnut@gentoo.org> jtds-1.2-r2.ebuild:
  Stable on ppc wrt bug 182176

  17 Jun 2007; Christoph Mende <angelos@gentoo.org> jtds-1.2-r2.ebuild:
  Stable on amd64 wrt bug 182176

  17 Jun 2007; Christian Faulhammer <opfer@gentoo.org> jtds-1.2-r2.ebuild:
  stable x86, bug 182176

  16 Jun 2007; Tobias Scherbaum <dertobi123@gentoo.org> jtds-1.2-r2.ebuild:
  Added ~ppc, bug #175994

  09 Jun 2007; Petteri Räty <betelgeuse@gentoo.org> -jtds-1.2.ebuild,
  -jtds-1.2-r1.ebuild:
  Removed unused revisions.

  06 Jun 2007; Markus Rothe <corsair@gentoo.org> jtds-1.2-r2.ebuild:
  Added ~ppc64; bug #175994

*jtds-1.2-r2 (07 May 2007)

  07 May 2007; Petteri Räty <betelgeuse@gentoo.org>